# sshfs-keeper

./: .coverage  .gitignore  AUDIT.md  FAQ.md  MAINTENANCE_REPORT.md  README.md  SKILL.md  SUGGESTIONS.md  config.example.toml  install-macos.sh  install.sh  pyproject.toml
.claude/: settings.json
docs/: api.md  architecture.md  configuration.md  index.md
launchd/: com.sshfs-keeper.plist
sshfs_keeper/: __init__.py  api.py  config.py  main.py  metrics.py  monitor.py  mount.py  notify.py  sync.py  transfer.py
sshfs_keeper/templates/: _keys_list.html  _mount_card.html  _mount_cards.html  _sync_card.html  _sync_cards.html  _transfer_rows.html  dashboard.html
systemd/: sshfs-keeper.service
test/: test_api.py  test_config.py  test_main.py  test_monitor.py  test_new_features.py  test_platform.py  test_transfer.py
